# RenderingEngine

./: .gitignore  CMakeLists.txt  README.md  advice.txt  geometry.h  main.cpp  main2.cpp
algorithm/: bundle.h  intersection.h  random.h  raytracing.h
film/: camera.h  color.h
geometry/: arithmetic.h
geometry/2d/: point2.h  vector2.h
geometry/3d/: normal3.h  point3.h  ray.h  vector3.h
geometry/base/: base.h
images/: out.ppm
importer/: collada.h
materials/: material.h
primitives/: geometry.h  linmath.h
shapes/: shape.h  sphere.h  triangle.h
test/: cube.dae  cube2.dae  cube3.dae  monkey.dae
